ref:change dockerfile to use sqlite

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -20,9 +20,11 @@ FROM alpine:latest
 
 WORKDIR /app
 
-# Install ca-certificates for HTTPS communication if needed (e.g., if Go app makes external calls)
-# This is a good practice
-RUN apk --no-cache add ca-certificates
+# Install ca-certificates for HTTPS communication if needed (e.g., if your Go app makes external calls)
+# Also, ensure sqlite3 is available if your Go app's driver has CGO dependencies
+# For pure Go SQLite drivers (like go-sqlite3), this might not be strictly necessary,
+# but it's good practice for general compatibility.
+RUN apk --no-cache add ca-certificates sqlite-libs
 
 # Copy the built binary from the builder stage
 COPY --from=builder /app/main .
