feat:add docker volume to ensure that data is persisted

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,20 @@ services:
     ports:
       - "8080:8080" # Map host port 8080 to container port 8080
     environment:
-      # Example environment variables for your Go backend
-      # - DB_HOST=database
-      # - DB_PORT=5432
       - BACKEND_PORT=8080 # This is what your Go app should listen on
-    # depends_on:
-    #   - database # Uncomment if you have a database service
+      # Tell your Go app where the SQLite database file will be
+      # This path should match where your Go app expects the DB file inside the container
+      - SQLITE_DB_PATH=/app/data/social_network.db # Or whatever path your Go app expects
+    volumes:
+      # Mount a named volume to persist the SQLite database file
+      # The host path (left side) is managed by Docker.
+      # The container path (right side) is where your Go app will store the .db file.
+      - sqlite_data:/app/data # This creates /app/data inside the container and persists it
+    # No depends_on for a separate database service needed with SQLite
 
   frontend:
     build:
-      context: ./frontend # Path to your Next.js frontend directory
+      context: ./frontend # Path to the Next.js frontend directory
       dockerfile: Dockerfile
     container_name: social-frontend
     ports:
@@ -26,21 +30,9 @@ services:
     environment:
       # Next.js requires environment variables to be prefixed with NEXT_PUBLIC_ for client-side access
       - NEXT_PUBLIC_BACKEND_URL=http://backend:8080 # How the frontend accesses the backend within the Docker network
-      # If your frontend also talks to a database directly (unlikely for a typical web app), add it here
     depends_on:
       - backend # Ensures the backend starts before the frontend
 
-  # Example Database Service (e.g., PostgreSQL) - Uncomment and configure if needed
-  # database:
-  #   image: postgres:15-alpine
-  #   container_name: social-db
-  #   environment:
-  #     POSTGRES_DB: social_network_db
-  #     POSTGRES_USER: user
-  #     POSTGRES_PASSWORD: password
-  #   volumes:
-  #     - db_data:/var/lib/postgresql/data # Persist database data
-
-# Volumes for persistent data (e.g., database)
-# volumes:
-#   db_data:
+# Define the named volume for SQLite data persistence
+volumes:
+  sqlite_data:
